# ecgcnn

./: .gitattributes  .gitignore  LICENSE  README.md  dataloader.py  main.py  makedataset.py  model.py  pyproject.toml  train.py
data/: mitbih.parquet  ordinal_map.json
